--- a/app/src/style.css
+++ b/app/src/style.css
@@ -41,3 +41,8 @@ body {
 .prose a {
   @apply text-blue-500 dark:text-white;
 }
+
+@theme {
+  --shadow-right: 4px 0 8px 0 rgba(17, 24, 39, 0.25);
+  --shadow-top: -4px 0 8px 0 rgba(17, 24, 39, 0.25);
+}
