--- a/app/src/style.css
+++ b/app/src/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 *::-webkit-scrollbar {
-  @apply bg-transparent w-3 h-3;
+  @apply h-3 w-3 bg-transparent;
 }
 
 * {
@@ -39,7 +39,7 @@ body {
 *::-webkit-scrollbar-thumb {
   transition: background 0.2s ease-in-out;
   border: 3px solid transparent;
-  @apply bg-gray-500 dark:bg-neutral-800 rounded-full bg-clip-content;
+  @apply rounded-full bg-gray-500 bg-clip-content dark:bg-neutral-800;
 }
 
 *::-webkit-scrollbar-thumb:hover {
